08/src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-dep
  labels:
    app: netology-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-app
  template:
    metadata:
      labels:
        app: netology-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
              name: nginx-port
          volumeMounts:
            - name: hello
              mountPath: /usr/share/nginx/html
        - name: mtool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
              name: mtool-port
      volumes:
        - name: hello
          configMap:
            name: config
            items:
            - key: "hello.html"
              path: "hello.html"
