08/src/ssl-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssl-dep
  labels:
    app: ssl-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssl-app
  template:
    metadata:
      labels:
        app: ssl-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
              name: nginx-port
          volumeMounts:
            - name: web-vol
              mountPath: /usr/share/nginx/html
      volumes:
        - name: web-vol
          configMap:
            name: nginx-web
            items:
            - key: "index.html"
              path: "index.html"
